Removing submodule go/src/github.com/cloudfoundry/bosh-agent
* CI runs against agent master

[#140156459](https://www.pivotaltracker.com/story/show/140156459)

Signed-off-by: Shatarupa Nandi <snandi@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -166,6 +166,8 @@ jobs:
           trigger: true
         - get: bosh-cli
           trigger: true
+        - get: bosh-agent
+          trigger: true
       - aggregate:
         - task: test-group-1
           privileged: true
@@ -217,6 +219,8 @@ jobs:
           trigger: true
         - get: bosh-cli
           trigger: true
+        - get: bosh-agent
+          trigger: true
       - aggregate:
         - task: test-group-1
           privileged: true
@@ -261,6 +265,7 @@ jobs:
     build_logs_to_retain: 250
     plan:
       - { get: bosh-src, trigger: true }
+      - { get: bosh-agent, trigger: true }
       - aggregate:
         - task: test-group-1
           privileged: true
@@ -308,6 +313,8 @@ jobs:
         - get: bosh-src
           trigger: true
         - get: bosh-cli
+          trigger: true
+        - get: bosh-agent
           trigger: true
       - aggregate:
         - task: upgrade-with-postgres
@@ -693,3 +700,10 @@ resources:
     type: bosh-io-release
     source:
       repository: cloudfoundry-incubator/bosh-vsphere-cpi-release
+
+  - name: bosh-agent
+    type: git
+    source:
+      uri: https://github.com/cloudfoundry/bosh-agent
+      branch: master
+
