--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 .tags
 .vagrant
 .yardoc
-go/src/github.com/cloudfoundry/bosh-agent
+src/go/src/github.com/cloudfoundry/bosh-agent
 
 Checkfile
 TAGS
