--- a/.final_builds/packages/health_monitor/index.yml
+++ b/.final_builds/packages/health_monitor/index.yml
@@ -435,6 +435,10 @@ builds:
     version: 69d4f6dae21d704c1be90d3b5a4ec5a87ec27810
     blobstore_id: 37f84409-1405-44c0-9faf-b73c114657c5
     sha1: 846ac577aa538f375997e09b9dec25d3a0e689e3
+  6ab97b6a93964daa66d1379c46fd6ad0c8e2a6fe:
+    version: 6ab97b6a93964daa66d1379c46fd6ad0c8e2a6fe
+    blobstore_id: 01fe7191-dd0a-44b5-490b-b8c040edfdc8
+    sha1: a7f7e6ad97c97fbbbe926cd60003a105a561f413
   6ba22609aa2070b41a9591cd7b05e010b4c693ed:
     version: 6ba22609aa2070b41a9591cd7b05e010b4c693ed
     blobstore_id: 970bbb71-17ad-4bc9-89f6-3b1d4e4b2e15
