--- a/releases/index.yml
+++ b/releases/index.yml
@@ -251,6 +251,8 @@ builds:
     version: "190"
   6f0cc9b8-be9f-4e91-a354-35a9b69433f7:
     version: "160"
+  6f98224d-bdbd-46b2-47ae-0aa19979a8e2:
+    version: "257.24"
   6fb0e10df7413b89ad6b34e7e92f2fc5f8c50c51:
     version: "13"
   70ea18ac-b5f8-4995-8ea9-b33e68b8d5e2:
