--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -859,6 +859,10 @@ builds:
     version: b6ae3f3ee8b2616c19f2a89f04f8f034d99b86b9
     blobstore_id: 9e761cd1-3cf3-4c01-9c3a-686fb2201fe8
     sha1: e2f8cb2cf8e7bd0c3489c652646dc1540221d9e8
+  b6d74b15368cbaf0d7c81927df459c8bba8342c0:
+    version: b6d74b15368cbaf0d7c81927df459c8bba8342c0
+    blobstore_id: 80ecf7a6-d273-4c1a-42b2-0ce3222bd0b5
+    sha1: 3bab5ac749ef42223c31d2762987dca5cfb8b108
   b74c6b0312d7920b8da181c08914ff7bb44a6e67:
     version: b74c6b0312d7920b8da181c08914ff7bb44a6e67
     blobstore_id: 48268ea7-b5e1-4284-9f3c-4585e9c614be
