--- a/.final_builds/packages/registry/index.yml
+++ b/.final_builds/packages/registry/index.yml
@@ -927,6 +927,10 @@ builds:
     version: "37"
     blobstore_id: d0047d66-990a-4fbe-8274-866d6fff948f
     sha1: 5e87070f74d1841289bb5bcec46708938023c067
+  def397d5fa4b2acfd0c32f5893d29e0d6d1e72a9:
+    version: def397d5fa4b2acfd0c32f5893d29e0d6d1e72a9
+    blobstore_id: beb40b02-e5a3-4f76-56fe-b5726a1672e1
+    sha1: ab0074b8ea7ffea4479da1c5e1572aa18a19ea8f
   dfe1a219994caf077325b033f2117d4cbe96c885:
     version: "54"
     blobstore_id: d457f8a4-8acb-455a-88b4-ff2980deda75
