--- a/releases/index.yml
+++ b/releases/index.yml
@@ -103,6 +103,8 @@ builds:
     version: "72"
   39420de6b806036821fcdafacd7b2ecf2137e77e:
     version: "21"
+  3b0aa353-986b-465b-48e7-97155316199f:
+    version: "255.13"
   3b1fd3e4-7756-459d-8930-68c8fcbd6a3f:
     version: "247"
   3b6704a1-f33e-49eb-924a-af53f9bd47e4:
