--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -320,14 +320,16 @@ jobs:
     build_logs_to_retain: 250
     plan:
       - { get: bosh-src, trigger: true }
-      - task: test
-        file: bosh-src/ci/tasks/test-blobstore-client-integration.yml
+      - task: test-s3
+        file: bosh-src/ci/tasks/test-s3-blobstore-client-integration.yml
         params:
           access_key_id: {{blobstore_client_aws_access_key_id}}
           secret_access_key: {{blobstore_client_aws_secret_access_key}}
           s3_region: {{blobstore_client_aws_s3_region}}
           s3_host: {{blobstore_client_aws_s3_host}}
           run_aws_tests: "Not null"
+      - task: test-dav
+        file: bosh-src/ci/tasks/test-dav-blobstore-client-integration.yml
 
   - name: integration-postgres-gocli-sha2
     public: true
