--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -127,6 +127,10 @@ builds:
     version: 205e1ca9796b2a1a8420a7b8699f0448eeb76cc0
     blobstore_id: db14178e-21b6-47f9-89fe-8c469be32ad6
     sha1: f27efba9774bd9bf880a0d8ef8ce08a494e94ac4
+  251e60fa0b1e239bc5c39498b65509ad411f5db8:
+    version: 251e60fa0b1e239bc5c39498b65509ad411f5db8
+    blobstore_id: 106dc4f3-451a-4e67-4952-ec5c30a7a9e1
+    sha1: b5d0fada3dc7ddde0bd4403b52e00ace2ca12fc6
   256ff7dfa2fe5e9ad99a655a2cd4c78ef99eb61d:
     version: "4"
     blobstore_id: rest/objects/4e4e78bca31e122004e4e8ec646e2105010a65a5593b
