--- a/.final_builds/packages/health_monitor/index.yml
+++ b/.final_builds/packages/health_monitor/index.yml
@@ -1063,6 +1063,10 @@ builds:
     version: "40"
     blobstore_id: ac0744ba-df7d-4b51-9425-ec43d33cc2e1
     sha1: ecd392220ef5bd7565ce6dbee6aa00457eac126a
+  f03be13344fb7d238752d4bee84dab8cf92f29b3:
+    version: f03be13344fb7d238752d4bee84dab8cf92f29b3
+    blobstore_id: c6aea52e-a814-4500-5693-b7033bec1b52
+    sha1: 35596d4241d2c7baf3841c6854e4f67923897959
   f0cc9bd33b5fb5e9ee469354b822fbfdc1e9e68f:
     version: f0cc9bd33b5fb5e9ee469354b822fbfdc1e9e68f
     blobstore_id: 8ac71802-12a9-4969-a36f-20ef7be5dfcf
