--- a/releases/index.yml
+++ b/releases/index.yml
@@ -367,6 +367,8 @@ builds:
     version: "31"
   a6ecc248-0bb1-4365-a657-d950a8536c5e:
     version: "206"
+  a71d8979-2f67-4e89-5aaa-519e84a1382c:
+    version: "255.14"
   a93bb59a-ca40-4b26-b6f3-45e205312fce:
     version: "137"
   aa6ead50-f2a2-4a78-9b05-3a1e52527c64:
