--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -18,6 +18,7 @@ groups:
       - finalize-bosh-release
       - bats-centos
       - bats-ubuntu
+      - brats-ubuntu
       - upgrade-tests
 
   - name: mysql
@@ -752,6 +753,26 @@ jobs:
         do:
         - {put: environment, params: {release: environment}}
 
+  - name: brats-ubuntu
+    plan:
+    - do:
+      - aggregate:
+        - get: bosh-src
+          passed:
+          - candidate-release
+        - get: bosh-cli
+        - get: bosh-deployment
+        - get: bosh-release
+          resource: bosh-candidate-release-tarballs
+          trigger: true
+          passed:
+            - candidate-release
+      - task: test-brats
+        file: bosh-src/ci/tasks/test-brats.yml
+        privileged: true
+        input_mapping:
+          bosh-dev-release: bosh-release
+
   - name: finalize-bosh-release
     serial: true
     plan:
@@ -887,5 +908,11 @@ resources:
     type: git
     source:
       uri: https://github.com/cloudfoundry/bosh-agent
+      branch: master
+
+  - name: bosh-deployment
+    type: git
+    source:
+      uri: https://github.com/cloudfoundry/bosh-deployment
       branch: master
 
