Add start-bosh command to the main-bosh-docker image
- The start-bosh command will deploy a bosh director using the docker
cpi.
- Refactor test-brats to use the new start-bosh command

[#140873479](https://www.pivotaltracker.com/story/show/140873479)

Signed-off-by: Adrian Zankich <azankich@pivotal.io>

--- a/ci/docker/main-bosh-docker/Dockerfile
+++ b/ci/docker/main-bosh-docker/Dockerfile
@@ -1,4 +1,12 @@
 FROM bosh/main-ruby-go
 
-ADD ./install_docker.sh /tmp/install_docker.sh
-RUN /tmp/install_docker.sh
+ADD ./install-docker.sh /tmp/install-docker.sh
+RUN /tmp/install-docker.sh
+RUN rm /tmp/install-docker.sh
+
+ADD ./install-bosh-dependencies.sh /tmp/install-bosh-dependencies.sh
+RUN /tmp/install-bosh-dependencies.sh
+RUN rm /tmp/install-bosh-dependencies.sh
+
+COPY start-bosh /usr/local/bin/
+RUN chmod +x /usr/local/bin/start-bosh
