Allow director to take NATS server CA cert
- Director now connects to NATS server only over
  verfified TLS connection.

[#139229129](https://www.pivotaltracker.com/story/show/139229129)

Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/src/bosh-director/spec/assets/test-director-config.yml
+++ b/src/bosh-director/spec/assets/test-director-config.yml
@@ -52,3 +52,5 @@ config_server:
   enabled: false
 record_events: true
 version: '0.0.2'
+mbus : 'nats://some-user:some-pass@some-nats-uri:1234'
+nats_server_ca_path: 'some-nats-server-ca-path'
