Use bosh-cli and bosh-deployment artifacts when building main-bosh-docker image
[#140873479](https://www.pivotaltracker.com/story/show/140873479)

Signed-off-by: Rob Day-Reynolds <rdayreynolds@pivotal.io>

--- a/ci/docker/main-bosh-docker/Dockerfile
+++ b/ci/docker/main-bosh-docker/Dockerfile
@@ -4,9 +4,10 @@ ADD ./install-docker.sh /tmp/install-docker.sh
 RUN /tmp/install-docker.sh
 RUN rm /tmp/install-docker.sh
 
-ADD ./install-bosh-dependencies.sh /tmp/install-bosh-dependencies.sh
-RUN /tmp/install-bosh-dependencies.sh
-RUN rm /tmp/install-bosh-dependencies.sh
+COPY bosh /usr/local/bin/
+RUN chmod +x /usr/local/bin/bosh
+
+COPY bosh-deployment /usr/local/
 
 COPY start-bosh /usr/local/bin/
 RUN chmod +x /usr/local/bin/start-bosh
