--- a/ci/docker/main-bosh-docker/Dockerfile
+++ b/ci/docker/main-bosh-docker/Dockerfile
@@ -7,7 +7,7 @@ RUN rm /tmp/install-docker.sh
 COPY bosh /usr/local/bin/
 RUN chmod +x /usr/local/bin/bosh
 
-COPY bosh-deployment /usr/local/
+COPY bosh-deployment /usr/local/bosh-deployment/
 
 COPY start-bosh /usr/local/bin/
 RUN chmod +x /usr/local/bin/start-bosh
