Add job to pipeline for testing remote databases.
- Add new rake task for running only Migration (spec:unit:migrations)
- Run migration unit tests on Postgresql RDS
- Run migration unit tests on MySQL RDS

[#140381619] (https://www.pivotaltracker.com/story/show/140381619)

Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -248,7 +248,35 @@ jobs:
               DB_VERSION: 9.6
             on_failure:
               <<: *slack-alert
-
+  - name: unit-2.3-rds
+    public: true
+    serial: true
+    build_logs_to_retain: 250
+    plan:
+      - { get: bosh-src, trigger: true }
+      - aggregate:
+        - task: test-mysql-rds
+          privileged: true
+          file: bosh-src/ci/tasks/test-unit-remote-db.yml
+          params:
+            RUBY_VERSION: 2.3.1
+            DB: mysql
+            DB_HOST: {{mysql-rds-host}}
+            DB_USER: {{mysql-rds-user}}
+            DB_PASSWORD: {{mysql-rds-password}}
+          on_failure:
+            <<: *slack-alert
+        - task: test-postgresql-rds
+          privileged: true
+          file: bosh-src/ci/tasks/test-unit-remote-db.yml
+          params:
+            RUBY_VERSION: 2.3.1
+            DB: postgresql
+            DB_HOST: {{postgresql-rds-host}}
+            DB_USER: {{postgresql-rds-user}}
+            DB_PASSWORD: {{postgresql-rds-password}}
+          on_failure:
+            <<: *slack-alert
   - name: blobstore-client-integration
     public: true
     serial: true
