Make candidate release block on RDS tests.
[#140381619] (https://www.pivotaltracker.com/story/show/140381619)

Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -582,6 +582,7 @@ jobs:
       - unit-2.3
       - unit-2.3-mysql
       - unit-2.3-postgres
+      - unit-2.3-rds
       - integration-mysql-gocli-sha1
       - integration-2.3-postgres
       - integration-postgres-gocli-sha2
