Fix broken inputs for bats
[#125440001](https://www.pivotaltracker.com/story/show/125440001)

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -790,6 +790,12 @@ resources:
       uri: https://github.com/cloudfoundry/bosh-acceptance-tests.git
       branch: gocli-bats
 
+  - name: bosh-deployment
+    type: git
+    source:
+      uri: https://github.com/cloudfoundry/bosh-deployment
+      branch: master
+
   - name: environment
     type: pool
     source:
